--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
 				<a class="nav-link" href="{{ path("app_index") }}">My Characters</a>
 			</li>
 			<li class="nav-item {% block createActive %}{% endblock %}">
-				<a class="nav-link" href="{{ path("app_index") }}">Create a character</a>
+				<a class="nav-link" href="{{ path("character_create") }}">Create a character</a>
 			</li>
 			<li class="nav-item {% block aboutActive %}{% endblock %}">
 				<a class="nav-link" href="{{ path("app_index") }}">About</a>
