--- a/templates/character/list.html.twig
+++ b/templates/character/list.html.twig
@@ -4,10 +4,18 @@
 
 {% block characterActive %}active{% endblock %}
 
+{% block stylesheets %}
+	<style>
+		i{
+			color:white;
+		}
+	</style>
+{% endblock %}
+
 {% block body %}
 	<div class="container text-center">
 			<div class="btn-group" role="group">	
-				<a href="{{ path("character_list_sorted", {'field': 'id'}) }}" class="btn btn-outline-secondary">Order by id</a>
+				<a href="{{ path("character_list_sorted", {'field': 'favorite'}) }}" class="btn btn-outline-secondary">Order by favorite</a>
 				<a href="{{ path("character_list_sorted", {'field': 'name'}) }}" class="btn btn-outline-secondary">Order by name</a>
 				<a href="{{ path("character_list_sorted", {'field': 'race'}) }}" class="btn btn-outline-secondary">Order by race</a>
 				<a href="{{ path("character_list_sorted", {'field': 'job'}) }}" class="btn btn-outline-secondary">Order by class</a>
@@ -29,6 +37,7 @@
 					</div>
 					<div class="card-footer">
 						<a href="{{ path("character_detail", {'id': character.id}) }}" class="btn btn-secondary float-left align-self-end">Detail</a>
+						<a href="{{ path("character_favorite", {'id': character.id, 'field': orderedBy }) }}">{% if character.favorite %}<i class="fas fa-star fa-lg align-bottom"></i>{% else %}<i class="far fa-star fa-lg align-bottom"></i>{% endif %}</a>
 						<a href="{{ path("character_edit", {'id': character.id}) }}" class="btn btn-warning float-right">Edit</a>
 					</div>
 				</div>
