--- a/templates/character/detail.html.twig
+++ b/templates/character/detail.html.twig
@@ -17,7 +17,7 @@
 					<div class="card-text" style="max-height:500px;">
 						<p>{% if character.description %}{{ character.description }}{% else %}No description{% endif %}</p>
 						<hr>
-						<p style="max-height:300px;overflow:auto">{% if character.bio %}{{ character.bio | nl2br }}{% else %}No Biography{% endif %}</p>
+						<p class="text-left" style="max-height:300px;overflow:auto">{% if character.bio %}{{ character.bio | nl2br }}{% else %}No Biography{% endif %}</p>
 					</div>
 				</div>
 				<div class="card-footer">
