--- a/templates/character/list.html.twig
+++ b/templates/character/list.html.twig
@@ -15,10 +15,10 @@
 {% block body %}
 	<div class="container text-center">
 			<div class="btn-group" role="group">	
-				<a href="{{ path("character_list_sorted", {'field': 'favorite'}) }}" class="btn btn-outline-secondary">Order by favorite</a>
-				<a href="{{ path("character_list_sorted", {'field': 'name'}) }}" class="btn btn-outline-secondary">Order by name</a>
-				<a href="{{ path("character_list_sorted", {'field': 'race'}) }}" class="btn btn-outline-secondary">Order by race</a>
-				<a href="{{ path("character_list_sorted", {'field': 'job'}) }}" class="btn btn-outline-secondary">Order by class</a>
+				<a href="{{ path("character_list_sorted", {'field': 'favorite'}) }}" class="btn btn-{% if orderedBy != 'favorite' %}outline-{% endif %}secondary">Order by favorite</a>
+				<a href="{{ path("character_list_sorted", {'field': 'name'}) }}" class="btn btn-{% if orderedBy != 'name' %}outline-{% endif %}secondary">Order by name</a>
+				<a href="{{ path("character_list_sorted", {'field': 'race'}) }}" class="btn btn-{% if orderedBy != 'race' %}outline-{% endif %}secondary">Order by race</a>
+				<a href="{{ path("character_list_sorted", {'field': 'job'}) }}" class="btn btn-{% if orderedBy != 'job' %}outline-{% endif %}secondary">Order by class</a>
 			</div>
 	</div>
 	<div class="row">
